header complete (without adaptation)

--- a/app/index.html
+++ b/app/index.html
@@ -27,9 +27,54 @@
 </head>
 
 <body>
+<div class="container">
+	<div class="page-container">
+		<div class="sidebar"></div>
+		<div class="content">
+			<!-- ======= HEADER START ======= -->
+			<header class="main-head">
+				<div class="mnu-line">
+					<nav class="main-mnu">
+						<ul>
+							<li><a href="#0">О компании</a></li>
+							<li><a href="#0">Продукция</a></li>
+							<li><a href="#0">Доставка</a></li>
+							<li><a href="#0">Оплата</a></li>
+							<li><a href="#0">Статьи</a></li>
+							<li><a href="#0">Контакты</a></li>
+							<li><a href="#0">Новости</a></li>
+						</ul>
+					</nav>
+				</div>
 
+				<div class="top-line">
+					<form class="form-search">
+						<label>
+							<input type="text" name="Поиск" placeholder="Поиск по товарам">
+						</label>
+						<button type="submit" class="btn btn-blue"><img src="img/icons/search-icon.png" alt="alt"></button>
+					</form>
 
-<!-- Custom HTML -->
+					<a href="#0" class="top-help">Нужна помощь?</a>
+					<a href="#0" class="top-stocks">Акции и скидки %</a>
+					<div class="top-favorites">
+						<img src="img/icons/heart-icon.png" alt="alt">
+						<a href="#0">Избранное (<span id="favorites-num">0</span>)</a>
+					</div>
+					<div class="top-cart">
+						<img src="img/icons/cart-icon.png" alt="alt">
+						<span>
+								<a href="#0">Корзина</a>
+								<span>Товаров: <span id="cart-num">0</span></span>
+							</span>
+					</div>
+				</div>
+			</header>
+			<!-- ======= HEADER END ======= -->
+		</div>
+	</div>
+</div>
+
 
 <script src="js/scripts.min.js"></script>
 
