section intro complete (without adaptation)

--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,48 @@
 				</div>
 			</header>
 			<!-- ======= HEADER END ======= -->
+
+			<!-- ======= SECTION INTRO START ======= -->
+			<section class="s-intro">
+				<div class="intro-slider owl-carousel">
+					<!-- slide start -->
+					<div class="intro-slide">
+						<div class="intro-slide-content">
+							<h2>Строительные материалы выгодно покупать</h2>
+							<div class="intro-slide-desc">Дарим скидку 5% на первый заказ</div>
+						</div>
+						<div class="intro-slide-img">
+							<img src="img/intro-img.jpg" alt="alt" class="img-responsive">
+						</div>
+					</div>
+					<!-- slide end -->
+
+					<!-- slide start -->
+					<div class="intro-slide">
+						<div class="intro-slide-content">
+							<h2>Строительные</h2>
+							<div class="intro-slide-desc">Дарим скидку 5% на первый заказ</div>
+						</div>
+						<div class="intro-slide-img">
+							<img src="img/intro-img.jpg" alt="alt" class="img-responsive">
+						</div>
+					</div>
+					<!-- slide end -->
+
+					<!-- slide start -->
+					<div class="intro-slide">
+						<div class="intro-slide-content">
+							<h2>Строительные материалы выгодно покупать</h2>
+							<div class="intro-slide-desc">Дарим скидку 5% на первый заказ Lorem ipsum dolor sit amet, consectetur adipisicing.</div>
+						</div>
+						<div class="intro-slide-img">
+							<img src="img/intro-img.jpg" alt="alt" class="img-responsive">
+						</div>
+					</div>
+					<!-- slide end -->
+				</div>
+			</section>
+			<!-- ======= SECTION INTRO END ======= -->
 		</div>
 	</div>
 </div>
