sidebar complete (without adaptation)

--- a/app/index.html
+++ b/app/index.html
@@ -29,11 +29,102 @@
 <body>
 <div class="container">
 	<div class="page-container">
-		<div class="sidebar"></div>
+		<!-- ======= SIDEBAR START ======= -->
+		<div class="sidebar">
+			<a href="/" class="logo">
+				<img src="img/logo.png" alt="alt" class="img-responsive">
+			</a>
+			<h1 class="site-desc">Производство и продажа строительных и отделочных материалов</h1>
+
+			<!-- side-mnu -->
+			<nav class="side-mnu">
+				<ul>
+					<li>
+						<a href="#0">
+							<img src="img/icons/mnu-icon-1-white.png" alt="alt" class="hover">
+							<img src="img/icons/mnu-icon-1.png" alt="alt" class="normal">
+							<span>Строительные материалы</span>
+						</a>
+					</li>
+					<li>
+						<a href="#0">
+							<img src="img/icons/mnu-icon-2-white.png" alt="alt" class="hover">
+							<img src="img/icons/mnu-icon-2.png" alt="alt" class="normal">
+							<span>Отделочные материалы</span>
+						</a>
+					</li>
+					<li>
+						<a href="#0">
+							<img src="img/icons/mnu-icon-3-white.png" alt="alt" class="hover">
+							<img src="img/icons/mnu-icon-3.png" alt="alt" class="normal">
+							<span>Крепеж</span>
+						</a>
+					</li>
+					<li>
+						<a href="#0">
+							<img src="img/icons/mnu-icon-4-white.png" alt="alt" class="hover">
+							<img src="img/icons/mnu-icon-4.png" alt="alt" class="normal">
+							<span>Дымоходы</span>
+						</a>
+					</li>
+					<li>
+						<a href="#0">
+							<img src="img/icons/mnu-icon-5-white.png" alt="alt" class="hover">
+							<img src="img/icons/mnu-icon-5.png" alt="alt" class="normal">
+							<span>Акции</span>
+						</a>
+					</li>
+				</ul>
+			</nav>
+			<!-- /side-mnu -->
+
+			<!-- contacts-block -->
+			<div class="contacts-block">
+				<!-- contact-item -->
+				<div class="contact-item">
+					<div class="contact-item-icon">
+						<img src="img/icons/contacts-mail-icon.png" alt="alt">
+					</div>
+					<div class="contact-item-content">
+						<a href="mailto:info@kupiistroj.ru">info@kupiistroj.ru</a>
+					</div>
+				</div>
+				<!-- /contact-item -->
+
+				<!-- contact-item -->
+				<div class="contact-item">
+					<div class="contact-item-icon">
+						<img src="img/icons/contact-place-icon.png" alt="alt">
+					</div>
+					<div class="contact-item-content">
+						г. Москва, ул. Илимская д. 1Б
+					</div>
+				</div>
+				<!-- /contact-item -->
+
+				<!-- contact-item -->
+				<div class="contact-item">
+					<div class="contact-item-icon">
+						<img src="img/icons/contacts-worktime-icon.png" alt="alt">
+					</div>
+					<div class="contact-item-content">
+						Пн-Пт 9:00 - 18:00
+					</div>
+				</div>
+				<!-- /contact-item -->
+
+				<a href="tel:84994041942" class="phone">8 (499) 404 19-42</a>
+			</div>
+			<!-- /contacts-block -->
+
+			<a href="#0" class="btn btn-blue">Заказать звонок</a>
+		</div>
+		<!-- ======= SIDEBAR END ======= -->
 		<div class="content">
 			<!-- ======= HEADER START ======= -->
 			<header class="main-head">
 				<div class="mnu-line">
+					<!-- main-mnu -->
 					<nav class="main-mnu">
 						<ul>
 							<li><a href="#0">О компании</a></li>
@@ -45,6 +136,7 @@
 							<li><a href="#0">Новости</a></li>
 						</ul>
 					</nav>
+					<!-- /main-mnu -->
 				</div>
 
 				<div class="top-line">
@@ -113,6 +205,14 @@
 				</div>
 			</section>
 			<!-- ======= SECTION INTRO END ======= -->
+
+			<!-- ======= SECTION BANNER START ======= -->
+			<section class="s-banner" style="background-image: url('img/banner-img.jpg');">
+				<h2 class="section-title">Продажа профиля для гипсокартона</h2>
+				<div class="banner-desc">Профиль потолочный 0,6 мм</div>
+				<a href="#0" class="btn btn-blue">Купить по акционной цене</a>
+			</section>
+			<!-- ======= SECTION BANNER END ======= -->
 		</div>
 	</div>
 </div>
