adaptation complete for sections up to .s-banner

--- a/app/index.html
+++ b/app/index.html
@@ -27,56 +27,54 @@
 </head>
 
 <body>
-<div class="container">
-	<div class="page-container">
-		<!-- ======= SIDEBAR START ======= -->
-		<div class="sidebar">
-			<a href="/" class="logo">
-				<img src="img/logo.png" alt="alt" class="img-responsive">
-			</a>
-			<h1 class="site-desc">Производство и продажа строительных и отделочных материалов</h1>
+<div id="page-wrapper">
+	<!-- mobile-mnu -->
+	<div id="mobile-mnu" data-logo="img/logo.png">
 
-			<!-- side-mnu -->
-			<nav class="side-mnu">
-				<ul>
-					<li>
-						<a href="#0">
-							<img src="img/icons/mnu-icon-1-white.png" alt="alt" class="hover">
-							<img src="img/icons/mnu-icon-1.png" alt="alt" class="normal">
-							<span>Строительные материалы</span>
-						</a>
-					</li>
-					<li>
-						<a href="#0">
-							<img src="img/icons/mnu-icon-2-white.png" alt="alt" class="hover">
-							<img src="img/icons/mnu-icon-2.png" alt="alt" class="normal">
-							<span>Отделочные материалы</span>
-						</a>
-					</li>
-					<li>
-						<a href="#0">
-							<img src="img/icons/mnu-icon-3-white.png" alt="alt" class="hover">
-							<img src="img/icons/mnu-icon-3.png" alt="alt" class="normal">
-							<span>Крепеж</span>
-						</a>
-					</li>
-					<li>
-						<a href="#0">
-							<img src="img/icons/mnu-icon-4-white.png" alt="alt" class="hover">
-							<img src="img/icons/mnu-icon-4.png" alt="alt" class="normal">
-							<span>Дымоходы</span>
-						</a>
-					</li>
-					<li>
-						<a href="#0">
-							<img src="img/icons/mnu-icon-5-white.png" alt="alt" class="hover">
-							<img src="img/icons/mnu-icon-5.png" alt="alt" class="normal">
-							<span>Акции</span>
-						</a>
-					</li>
-				</ul>
-			</nav>
-			<!-- /side-mnu -->
+		<ul id="mob-menu">
+			<li><a href="#0">О компании</a></li>
+			<li><a href="#0">Продукция</a></li>
+			<li><a href="#0">Доставка</a></li>
+			<li><a href="#0">Оплата</a></li>
+			<li><a href="#0">Статьи</a></li>
+			<li><a href="#0">Контакты</a></li>
+			<li><a href="#0">Новости</a></li>
+		</ul>
+
+
+		<div id="mob-catalog">
+			<ul>
+				<li>
+					<a href="#0">
+						<img src="img/icons/mnu-icon-1.png" alt="alt" class="normal">
+						<span>Строительные материалы</span>
+					</a>
+				</li>
+				<li>
+					<a href="#0">
+						<img src="img/icons/mnu-icon-2.png" alt="alt" class="normal">
+						<span>Отделочные материалы</span>
+					</a>
+				</li>
+				<li>
+					<a href="#0">
+						<img src="img/icons/mnu-icon-3.png" alt="alt" class="normal">
+						<span>Крепеж</span>
+					</a>
+				</li>
+				<li>
+					<a href="#0">
+						<img src="img/icons/mnu-icon-4.png" alt="alt" class="normal">
+						<span>Дымоходы</span>
+					</a>
+				</li>
+				<li>
+					<a href="#0">
+						<img src="img/icons/mnu-icon-5.png" alt="alt" class="normal">
+						<span>Акции</span>
+					</a>
+				</li>
+			</ul>
 
 			<!-- contacts-block -->
 			<div class="contacts-block">
@@ -119,103 +117,212 @@
 
 			<a href="#0" class="btn btn-blue">Заказать звонок</a>
 		</div>
-		<!-- ======= SIDEBAR END ======= -->
-		<div class="content">
-			<!-- ======= HEADER START ======= -->
-			<header class="main-head">
-				<div class="mnu-line">
-					<!-- main-mnu -->
-					<nav class="main-mnu">
-						<ul>
-							<li><a href="#0">О компании</a></li>
-							<li><a href="#0">Продукция</a></li>
-							<li><a href="#0">Доставка</a></li>
-							<li><a href="#0">Оплата</a></li>
-							<li><a href="#0">Статьи</a></li>
-							<li><a href="#0">Контакты</a></li>
-							<li><a href="#0">Новости</a></li>
-						</ul>
-					</nav>
-					<!-- /main-mnu -->
-				</div>
+	</div>
+	<!-- /mobile-mnu -->
 
-				<div class="top-line">
-					<form class="form-search">
-						<label>
-							<input type="text" name="Поиск" placeholder="Поиск по товарам">
-						</label>
-						<button type="submit" class="btn btn-blue"><img src="img/icons/search-icon.png" alt="alt"></button>
-					</form>
+	<div class="container">
+		<div class="page-container">
+			<!-- ======= SIDEBAR START ======= -->
+			<div class="sidebar">
+				<a href="/" class="logo">
+					<img src="img/logo.png" alt="alt" class="img-responsive">
+				</a>
+				<h1 class="site-desc">Производство и продажа строительных и отделочных материалов</h1>
 
-					<a href="#0" class="top-help">Нужна помощь?</a>
-					<a href="#0" class="top-stocks">Акции и скидки %</a>
-					<div class="top-favorites">
-						<img src="img/icons/heart-icon.png" alt="alt">
-						<a href="#0">Избранное (<span id="favorites-num">0</span>)</a>
+				<!-- side-mnu -->
+				<nav class="side-mnu">
+					<ul>
+						<li>
+							<a href="#0">
+								<img src="img/icons/mnu-icon-1-white.png" alt="alt" class="hover">
+								<img src="img/icons/mnu-icon-1.png" alt="alt" class="normal">
+								<span>Строительные материалы</span>
+							</a>
+						</li>
+						<li>
+							<a href="#0">
+								<img src="img/icons/mnu-icon-2-white.png" alt="alt" class="hover">
+								<img src="img/icons/mnu-icon-2.png" alt="alt" class="normal">
+								<span>Отделочные материалы</span>
+							</a>
+						</li>
+						<li>
+							<a href="#0">
+								<img src="img/icons/mnu-icon-3-white.png" alt="alt" class="hover">
+								<img src="img/icons/mnu-icon-3.png" alt="alt" class="normal">
+								<span>Крепеж</span>
+							</a>
+						</li>
+						<li>
+							<a href="#0">
+								<img src="img/icons/mnu-icon-4-white.png" alt="alt" class="hover">
+								<img src="img/icons/mnu-icon-4.png" alt="alt" class="normal">
+								<span>Дымоходы</span>
+							</a>
+						</li>
+						<li>
+							<a href="#0">
+								<img src="img/icons/mnu-icon-5-white.png" alt="alt" class="hover">
+								<img src="img/icons/mnu-icon-5.png" alt="alt" class="normal">
+								<span>Акции</span>
+							</a>
+						</li>
+					</ul>
+				</nav>
+				<!-- /side-mnu -->
+
+				<!-- contacts-block -->
+				<div class="contacts-block">
+					<!-- contact-item -->
+					<div class="contact-item">
+						<div class="contact-item-icon">
+							<img src="img/icons/contacts-mail-icon.png" alt="alt">
+						</div>
+						<div class="contact-item-content">
+							<a href="mailto:info@kupiistroj.ru">info@kupiistroj.ru</a>
+						</div>
 					</div>
-					<div class="top-cart">
-						<img src="img/icons/cart-icon.png" alt="alt">
-						<span>
-								<a href="#0">Корзина</a>
-								<span>Товаров: <span id="cart-num">0</span></span>
+					<!-- /contact-item -->
+
+					<!-- contact-item -->
+					<div class="contact-item">
+						<div class="contact-item-icon">
+							<img src="img/icons/contact-place-icon.png" alt="alt">
+						</div>
+						<div class="contact-item-content">
+							г. Москва, ул. Илимская д. 1Б
+						</div>
+					</div>
+					<!-- /contact-item -->
+
+					<!-- contact-item -->
+					<div class="contact-item">
+						<div class="contact-item-icon">
+							<img src="img/icons/contacts-worktime-icon.png" alt="alt">
+						</div>
+						<div class="contact-item-content">
+							Пн-Пт 9:00 - 18:00
+						</div>
+					</div>
+					<!-- /contact-item -->
+
+					<a href="tel:84994041942" class="phone">8 (499) 404 19-42</a>
+				</div>
+				<!-- /contacts-block -->
+
+				<a href="#0" class="btn btn-blue">Заказать звонок</a>
+			</div>
+			<!-- ======= SIDEBAR END ======= -->
+			<div class="content">
+				<!-- ======= HEADER START ======= -->
+				<header class="main-head">
+					<div class="mnu-line">
+						<!-- main-mnu -->
+						<nav class="main-mnu">
+							<ul>
+								<li><a href="#0">О компании</a></li>
+								<li><a href="#0">Продукция</a></li>
+								<li><a href="#0">Доставка</a></li>
+								<li><a href="#0">Оплата</a></li>
+								<li><a href="#0">Статьи</a></li>
+								<li><a href="#0">Контакты</a></li>
+								<li><a href="#0">Новости</a></li>
+							</ul>
+						</nav>
+						<!-- /main-mnu -->
+					</div>
+
+					<div class="top-line">
+
+						<button class="hamburger hamburger--collapse d-xl-none" type="button" id="mmenu-btn">
+							<span class="hamburger-box">
+								<span class="hamburger-inner"></span>
 							</span>
-					</div>
-				</div>
-			</header>
-			<!-- ======= HEADER END ======= -->
+						</button>
 
-			<!-- ======= SECTION INTRO START ======= -->
-			<section class="s-intro">
-				<div class="intro-slider owl-carousel">
-					<!-- slide start -->
-					<div class="intro-slide">
-						<div class="intro-slide-content">
-							<h2>Строительные материалы выгодно покупать</h2>
-							<div class="intro-slide-desc">Дарим скидку 5% на первый заказ</div>
-						</div>
-						<div class="intro-slide-img">
-							<img src="img/intro-img.jpg" alt="alt" class="img-responsive">
-						</div>
-					</div>
-					<!-- slide end -->
+						<form class="form-search">
+							<label>
+								<input type="text" name="Поиск" placeholder="Поиск по товарам">
+							</label>
+							<button type="submit" class="btn btn-blue"><img src="img/icons/search-icon.png" alt="alt"></button>
+						</form>
 
-					<!-- slide start -->
-					<div class="intro-slide">
-						<div class="intro-slide-content">
-							<h2>Строительные</h2>
-							<div class="intro-slide-desc">Дарим скидку 5% на первый заказ</div>
-						</div>
-						<div class="intro-slide-img">
-							<img src="img/intro-img.jpg" alt="alt" class="img-responsive">
-						</div>
-					</div>
-					<!-- slide end -->
+						<a href="#0" class="top-help">Нужна помощь?</a>
+						<a href="#0" class="top-stocks">Акции и скидки %</a>
 
-					<!-- slide start -->
-					<div class="intro-slide">
-						<div class="intro-slide-content">
-							<h2>Строительные материалы выгодно покупать</h2>
-							<div class="intro-slide-desc">Дарим скидку 5% на первый заказ Lorem ipsum dolor sit amet, consectetur adipisicing.</div>
-						</div>
-						<div class="intro-slide-img">
-							<img src="img/intro-img.jpg" alt="alt" class="img-responsive">
-						</div>
-					</div>
-					<!-- slide end -->
-				</div>
-			</section>
-			<!-- ======= SECTION INTRO END ======= -->
 
-			<!-- ======= SECTION BANNER START ======= -->
-			<section class="s-banner" style="background-image: url('img/banner-img.jpg');">
-				<h2 class="section-title">Продажа профиля для гипсокартона</h2>
-				<div class="banner-desc">Профиль потолочный 0,6 мм</div>
-				<a href="#0" class="btn btn-blue">Купить по акционной цене</a>
-			</section>
-			<!-- ======= SECTION BANNER END ======= -->
+						<div class="top-icons-links">
+							<a href="0" class="top-favorites">
+								<img src="img/icons/heart-icon.png" alt="alt">
+								<span><span class="top-favorites-span">Избранное (</span><span id="favorites-num">0</span><span class="top-favorites-span">)</span></span>
+							</a>
+							<a href="#0" class="top-cart">
+								<img src="img/icons/cart-icon.png" alt="alt">
+								<span>
+								<span class="top-cart-title">Корзина</span>
+								<span class="help-class"><span class="top-cart-span">Товаров:</span><span id="cart-num">0</span></span>
+							</span>
+							</a>
+						</div>
+
+					</div>
+				</header>
+				<!-- ======= HEADER END ======= -->
+
+				<!-- ======= SECTION INTRO START ======= -->
+				<section class="s-intro">
+					<div class="intro-slider owl-carousel">
+						<!-- slide start -->
+						<div class="intro-slide">
+							<div class="intro-slide-content">
+								<h2>Строительные материалы выгодно покупать</h2>
+								<div class="intro-slide-desc">Дарим скидку 5% на первый заказ</div>
+							</div>
+							<div class="intro-slide-img">
+								<img src="img/intro-img.jpg" alt="alt" class="img-responsive">
+							</div>
+						</div>
+						<!-- slide end -->
+
+						<!-- slide start -->
+						<div class="intro-slide">
+							<div class="intro-slide-content">
+								<h2>Строительные</h2>
+								<div class="intro-slide-desc">Дарим скидку 5% на первый заказ</div>
+							</div>
+							<div class="intro-slide-img">
+								<img src="img/intro-img.jpg" alt="alt" class="img-responsive">
+							</div>
+						</div>
+						<!-- slide end -->
+
+						<!-- slide start -->
+						<div class="intro-slide">
+							<div class="intro-slide-content">
+								<h2>Строительные материалы выгодно покупать</h2>
+								<div class="intro-slide-desc">Дарим скидку 5% на первый заказ Lorem ipsum dolor sit amet, consectetur adipisicing.</div>
+							</div>
+							<div class="intro-slide-img">
+								<img src="img/intro-img.jpg" alt="alt" class="img-responsive">
+							</div>
+						</div>
+						<!-- slide end -->
+					</div>
+				</section>
+				<!-- ======= SECTION INTRO END ======= -->
+
+				<!-- ======= SECTION BANNER START ======= -->
+				<section class="s-banner" style="background-image: url('img/banner-img.jpg');">
+					<h2 class="section-title">Продажа профиля для гипсокартона</h2>
+					<div class="banner-desc">Профиль потолочный 0,6 мм</div>
+					<a href="#0" class="btn btn-blue">Купить по акционной цене</a>
+				</section>
+				<!-- ======= SECTION BANNER END ======= -->
+			</div>
 		</div>
 	</div>
 </div>
+
 
 
 <script src="js/scripts.min.js"></script>
