section production complete

--- a/app/index.html
+++ b/app/index.html
@@ -264,7 +264,6 @@
 							</span>
 							</a>
 						</div>
-
 					</div>
 				</header>
 				<!-- ======= HEADER END ======= -->
@@ -318,6 +317,86 @@
 					<a href="#0" class="btn btn-blue">Купить по акционной цене</a>
 				</section>
 				<!-- ======= SECTION BANNER END ======= -->
+
+				<!-- ======= SECTION PRODUCTION START ======= -->
+				<section class="s-production">
+					<h2 class="section-title">Продукция компании "Купи строй"</h2>
+					<div class="production-wrap">
+						<div class="row">
+							<!-- production-item -->
+							<div class="col-xl-3 col-lg-3 col-sm-6 ">
+								<div class="production-item">
+									<div class="production-item-img" style="background-image: url('img/production-img-1.jpg');"></div>
+									<div class="production-item-content">
+										<div class="production-item-title">Строительные материалы</div>
+										<div class="production-item-links">
+											<a href="#0" class="production-item-link">Профиль для ГКЛ</a>
+											<a href="#0" class="production-item-link">Гипсокартонный лист</a>
+											<a href="#0" class="production-item-link">Армированные материалы</a>
+											<a href="#0" class="production-item-link">Пленка</a>
+										</div>
+										<a href="#0" class="more-links">+3 категории</a>
+
+									</div>
+								</div>
+							</div>
+							<!-- /production-item -->
+
+							<!-- production-item -->
+							<div class="col-xl-3 col-lg-3 col-sm-6 ">
+								<div class="production-item">
+									<div class="production-item-img" style="background-image: url('img/production-img-2.jpg');"></div>
+									<div class="production-item-content">
+										<div class="production-item-title">Отделочные материалы</div>
+										<div class="production-item-links">
+											<a href="#0" class="production-item-link">Напольные покрытия</a>
+											<a href="#0" class="production-item-link">Подложка под ламинат и паркет</a>
+											<a href="#0" class="production-item-link">Подвесные потолки</a>
+											<a href="#0" class="production-item-link">Керамическая плитка</a>
+										</div>
+										<a href="#0" class="more-links">+3 категории</a>
+									</div>
+								</div>
+							</div>
+							<!-- /production-item -->
+
+							<!-- production-item -->
+							<div class="col-xl-3 col-lg-3 col-sm-6 ">
+								<div class="production-item">
+									<div class="production-item-img" style="background-image: url('img/production-img-3.jpg');"></div>
+									<div class="production-item-content">
+										<div class="production-item-title">Крепёж</div>
+										<div class="production-item-links">
+											<a href="#0" class="production-item-link">Анкерный крепёж</a>
+											<a href="#0" class="production-item-link">Гвозди</a>
+											<a href="#0" class="production-item-link">Дюбель-Гвозди</a>
+											<a href="#0" class="production-item-link">Саморезы и шурупы</a>
+										</div>
+										<a href="#0" class="more-links">+3 категории</a>
+									</div>
+								</div>
+							</div>
+							<!-- /production-item -->
+
+							<!-- production-item -->
+							<div class="col-xl-3 col-lg-3 col-sm-6 ">
+								<div class="production-item">
+									<div class="production-item-img" style="background-image: url('img/production-img-4.jpg');"></div>
+									<div class="production-item-content">
+										<div class="production-item-title">Дымоходы</div>
+										<div class="production-item-links">
+											<a href="#0" class="production-item-link">Двухконтурная система</a>
+											<a href="#0" class="production-item-link">Одноконтурная система</a>
+										</div>
+<!--										<a href="#0" class="more-links">+3 категории</a>-->
+									</div>
+								</div>
+							</div>
+							<!-- /production-item -->
+						</div>
+					</div>
+				</section>
+				<!-- ======= SECTION PRODUCTION START ======= -->
 			</div>
 		</div>
 	</div>
