sections why and about complete

--- a/app/index.html
+++ b/app/index.html
@@ -397,9 +397,61 @@
 					</div>
 				</section>
 				<!-- ======= SECTION PRODUCTION START ======= -->
+
+				<!-- ======= SECTION WHY START ======= -->
+				<section class="s-why">
+					<h2 class="section-title">Почему мы?</h2>
+					<div class="why-wrap">
+						<!-- why-item -->
+						<div class="why-item">
+							<div class="why-item-icon">
+								<img src="img/icons/why-icon-1.png" alt="alt">
+							</div>
+							<div class="why-item-title">Срочная доставка</div>
+						</div>
+						<!-- /why-item -->
+
+						<!-- why-item -->
+						<div class="why-item">
+							<div class="why-item-icon">
+								<img src="img/icons/why-icon-2.png" alt="alt">
+							</div>
+							<div class="why-item-title">Удобная оплата</div>
+						</div>
+						<!-- /why-item -->
+
+						<!-- why-item -->
+						<div class="why-item">
+							<div class="why-item-icon">
+								<img src="img/icons/why-icon-3.png" alt="alt">
+							</div>
+							<div class="why-item-title">Сертифицированный товар</div>
+						</div>
+						<!-- /why-item -->
+					</div>
+				</section>
+				<!-- ======= SECTION WHY END ======= -->
 			</div>
 		</div>
 	</div>
+
+	<!-- ======= SECTION ABOUT START ======= -->
+	<section class="s-about">
+		<img src="img/about-img.png" alt="alt" class="about-img">
+		<div class="page-container">
+			<div class="content">
+				<div class="about-content">
+					<h2 class="section-title">О нас</h2>
+					<p>Возможность выбрать и приобрести стройматериалы для ремонта, не выходя из дома, даст интернет-магазин строительных материалов в Москве. Заказать нужные материалы и инструмент вам поможет компания.</p>
+					<p>Продажа стройматериалов через нашу компанию производится уже не первый год. С 2011 года мы создали постоянную клиентскую базу. Всегда рады принять в наши ряды новичков. Нам дорог любой новый клиент. Всеми льготами, которые предоставляются постоянным клиентам, мы готовы поделиться с новичками. Большую роль играет то, что производитель поставляет товар в срок и надлежащего качества. Наша компания работает только с проверенными производителями и поставщиками. Выбираем самый востребованный на рынке товар.</p>
+				</div>
+			</div>
+		</div>
+
+	</section>
+	<!-- ======= SECTION ABOUT END ======= -->
+
+
 </div>
 
 
