section contacts complete

--- a/app/index.html
+++ b/app/index.html
@@ -447,9 +447,23 @@
 				</div>
 			</div>
 		</div>
-
 	</section>
 	<!-- ======= SECTION ABOUT END ======= -->
+
+
+	<div class="page-container">
+		<div class="content">
+			<!-- ======= SECTION CONTACTS START ======= -->
+			<section class="s-contacts pl-75">
+				<h2 class="section-title">Контакты</h2>
+
+				<div id="map" data-att="55.889704" data-long="37.573030" data-zoom="16" data-marker="img/icons/map-marker.svg"></div>
+			</section>
+			<!-- ======= SECTION CONTACTS END ======= -->
+		</div>
+	</div>
+
+
 
 
 </div>
