index.html complete

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,21 @@
 </head>
 
 <body>
+<!-- preloader -->
+<div class="preloader">
+	<div class="sk-cube-grid">
+		<div class="sk-cube sk-cube-1"></div>
+		<div class="sk-cube sk-cube-2"></div>
+		<div class="sk-cube sk-cube-3"></div>
+		<div class="sk-cube sk-cube-4"></div>
+		<div class="sk-cube sk-cube-5"></div>
+		<div class="sk-cube sk-cube-6"></div>
+		<div class="sk-cube sk-cube-7"></div>
+		<div class="sk-cube sk-cube-8"></div>
+		<div class="sk-cube sk-cube-9"></div>
+	</div>
+</div>
+<!-- preloader -->
 <div id="page-wrapper">
 	<!-- mobile-mnu -->
 	<div id="mobile-mnu" data-logo="img/logo.png">
@@ -124,93 +139,96 @@
 		<div class="page-container">
 			<!-- ======= SIDEBAR START ======= -->
 			<div class="sidebar">
-				<a href="/" class="logo">
-					<img src="img/logo.png" alt="alt" class="img-responsive">
-				</a>
-				<h1 class="site-desc">Производство и продажа строительных и отделочных материалов</h1>
+				<div class="sidebar-content">
+					<a href="/" class="logo">
+						<img src="img/logo.png" alt="alt" class="img-responsive">
+					</a>
+					<h1 class="site-desc">Производство и продажа строительных и отделочных материалов</h1>
 
-				<!-- side-mnu -->
-				<nav class="side-mnu">
-					<ul>
-						<li>
-							<a href="#0">
-								<img src="img/icons/mnu-icon-1-white.png" alt="alt" class="hover">
-								<img src="img/icons/mnu-icon-1.png" alt="alt" class="normal">
-								<span>Строительные материалы</span>
-							</a>
-						</li>
-						<li>
-							<a href="#0">
-								<img src="img/icons/mnu-icon-2-white.png" alt="alt" class="hover">
-								<img src="img/icons/mnu-icon-2.png" alt="alt" class="normal">
-								<span>Отделочные материалы</span>
-							</a>
-						</li>
-						<li>
-							<a href="#0">
-								<img src="img/icons/mnu-icon-3-white.png" alt="alt" class="hover">
-								<img src="img/icons/mnu-icon-3.png" alt="alt" class="normal">
-								<span>Крепеж</span>
-							</a>
-						</li>
-						<li>
-							<a href="#0">
-								<img src="img/icons/mnu-icon-4-white.png" alt="alt" class="hover">
-								<img src="img/icons/mnu-icon-4.png" alt="alt" class="normal">
-								<span>Дымоходы</span>
-							</a>
-						</li>
-						<li>
-							<a href="#0">
-								<img src="img/icons/mnu-icon-5-white.png" alt="alt" class="hover">
-								<img src="img/icons/mnu-icon-5.png" alt="alt" class="normal">
-								<span>Акции</span>
-							</a>
-						</li>
-					</ul>
-				</nav>
-				<!-- /side-mnu -->
+					<!-- side-mnu -->
+					<nav class="side-mnu">
+						<ul>
+							<li>
+								<a href="#0">
+									<img src="img/icons/mnu-icon-1-white.png" alt="alt" class="hover">
+									<img src="img/icons/mnu-icon-1.png" alt="alt" class="normal">
+									<span>Строительные материалы</span>
+								</a>
+							</li>
+							<li>
+								<a href="#0">
+									<img src="img/icons/mnu-icon-2-white.png" alt="alt" class="hover">
+									<img src="img/icons/mnu-icon-2.png" alt="alt" class="normal">
+									<span>Отделочные материалы</span>
+								</a>
+							</li>
+							<li>
+								<a href="#0">
+									<img src="img/icons/mnu-icon-3-white.png" alt="alt" class="hover">
+									<img src="img/icons/mnu-icon-3.png" alt="alt" class="normal">
+									<span>Крепеж</span>
+								</a>
+							</li>
+							<li>
+								<a href="#0">
+									<img src="img/icons/mnu-icon-4-white.png" alt="alt" class="hover">
+									<img src="img/icons/mnu-icon-4.png" alt="alt" class="normal">
+									<span>Дымоходы</span>
+								</a>
+							</li>
+							<li>
+								<a href="#0">
+									<img src="img/icons/mnu-icon-5-white.png" alt="alt" class="hover">
+									<img src="img/icons/mnu-icon-5.png" alt="alt" class="normal">
+									<span>Акции</span>
+								</a>
+							</li>
+						</ul>
+					</nav>
+					<!-- /side-mnu -->
 
-				<!-- contacts-block -->
-				<div class="contacts-block">
-					<!-- contact-item -->
-					<div class="contact-item">
-						<div class="contact-item-icon">
-							<img src="img/icons/contacts-mail-icon.png" alt="alt">
+					<!-- contacts-block -->
+					<div class="contacts-block">
+						<!-- contact-item -->
+						<div class="contact-item">
+							<div class="contact-item-icon">
+								<img src="img/icons/contacts-mail-icon.png" alt="alt">
+							</div>
+							<div class="contact-item-content">
+								<a href="mailto:info@kupiistroj.ru">info@kupiistroj.ru</a>
+							</div>
 						</div>
-						<div class="contact-item-content">
-							<a href="mailto:info@kupiistroj.ru">info@kupiistroj.ru</a>
+						<!-- /contact-item -->
+
+						<!-- contact-item -->
+						<div class="contact-item">
+							<div class="contact-item-icon">
+								<img src="img/icons/contact-place-icon.png" alt="alt">
+							</div>
+							<div class="contact-item-content">
+								г. Москва, ул. Илимская д. 1Б
+							</div>
 						</div>
+						<!-- /contact-item -->
+
+						<!-- contact-item -->
+						<div class="contact-item">
+							<div class="contact-item-icon">
+								<img src="img/icons/contacts-worktime-icon.png" alt="alt">
+							</div>
+							<div class="contact-item-content">
+								Пн-Пт 9:00 - 18:00
+							</div>
+						</div>
+						<!-- /contact-item -->
+
+						<a href="tel:84994041942" class="phone">8 (499) 404 19-42</a>
 					</div>
-					<!-- /contact-item -->
+					<!-- /contacts-block -->
 
-					<!-- contact-item -->
-					<div class="contact-item">
-						<div class="contact-item-icon">
-							<img src="img/icons/contact-place-icon.png" alt="alt">
-						</div>
-						<div class="contact-item-content">
-							г. Москва, ул. Илимская д. 1Б
-						</div>
-					</div>
-					<!-- /contact-item -->
-
-					<!-- contact-item -->
-					<div class="contact-item">
-						<div class="contact-item-icon">
-							<img src="img/icons/contacts-worktime-icon.png" alt="alt">
-						</div>
-						<div class="contact-item-content">
-							Пн-Пт 9:00 - 18:00
-						</div>
-					</div>
-					<!-- /contact-item -->
-
-					<a href="tel:84994041942" class="phone">8 (499) 404 19-42</a>
+					<a href="#0" class="btn btn-blue">Заказать звонок</a>
 				</div>
-				<!-- /contacts-block -->
 
-				<a href="#0" class="btn btn-blue">Заказать звонок</a>
 			</div>
 			<!-- ======= SIDEBAR END ======= -->
 			<div class="content">
@@ -450,7 +468,6 @@
 	</section>
 	<!-- ======= SECTION ABOUT END ======= -->
 
-
 	<div class="page-container">
 		<div class="content">
 			<!-- ======= SECTION CONTACTS START ======= -->
@@ -462,6 +479,104 @@
 			<!-- ======= SECTION CONTACTS END ======= -->
 		</div>
 	</div>
+
+	<!-- ======= FOOTER START ======= -->
+	<footer class="main-foot">
+		<div class="page-container">
+			<div class="content">
+				<div class="footer-content pl-75">
+					<div class="footer-column">
+						<h3>Контакты</h3>
+						<!-- contacts-block -->
+						<div class="contacts-block">
+							<!-- contact-item -->
+							<div class="contact-item">
+								<div class="contact-item-icon">
+									<img src="img/icons/contacts-mail-icon.png" alt="alt">
+								</div>
+								<div class="contact-item-content">
+									<a href="mailto:info@kupiistroj.ru">info@kupiistroj.ru</a>
+								</div>
+							</div>
+							<!-- /contact-item -->
+
+							<!-- contact-item -->
+							<div class="contact-item">
+								<div class="contact-item-icon">
+									<img src="img/icons/contact-place-icon.png" alt="alt">
+								</div>
+								<div class="contact-item-content">
+									г. Москва, ул. Илимская д. 1Б
+								</div>
+							</div>
+							<!-- /contact-item -->
+
+							<!-- contact-item -->
+							<div class="contact-item">
+								<div class="contact-item-icon">
+									<img src="img/icons/contacts-worktime-icon.png" alt="alt">
+								</div>
+								<div class="contact-item-content">
+									Пн-Пт 9:00 - 18:00
+								</div>
+							</div>
+							<!-- /contact-item -->
+
+							<a href="tel:84994041942" class="phone">8 (499) 404 19-42</a>
+						</div>
+						<!-- /contacts-block -->
+					</div>
+
+					<div class="footer-column">
+						<h3>Меню</h3>
+						<nav class="footer-mnu">
+							<ul>
+								<li><a href="#0">О компании</a></li>
+								<li><a href="#0">Доставка</a></li>
+								<li><a href="#0">Оплата</a></li>
+								<li><a href="#0">Статьи</a></li>
+								<li><a href="#0">Контакты</a></li>
+							</ul>
+						</nav>
+					</div>
+
+					<div class="footer-column">
+						<h3>Каталог</h3>
+						<nav class="footer-mnu">
+							<ul>
+								<li><a href="#0">Строительные материалы</a></li>
+								<li><a href="#0">Отделочные материалы</a></li>
+								<li><a href="#0">Крепёж</a></li>
+								<li><a href="#0">Дымоходы</a></li>
+								<li><a href="#0">Акции</a></li>
+							</ul>
+						</nav>
+					</div>
+
+					<div class="footer-column">
+						<form class="form-footer-search">
+							<label>
+								<input type="text" name="Поиск" placeholder="Поиск товаров">
+							</label>
+						</form>
+						
+						<div class="footer-cards">
+							<span>Мы принимаем:</span>
+							<img src="img/cards.png" alt="alt" class="img-responsive">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<!-- ======= FOOTER END ======= -->
+
+	<div class="dev-line">
+		Разработка сайта <a href="https://grampus-studio.ru/" target="_blank"><img src="img/dev-logo.png" alt="alt"></a>
+	</div>
+
+
+
 
 
 
