--- a/app/page-about.html
+++ b/app/page-about.html
@@ -295,19 +295,108 @@
 				</div>
 				<!-- ======= BREADCRUMBS END ======= -->
 
-				<!-- ======= SECTION ARTICLE START ======= -->
-				<section class="s-article p-article pl-60">
+				<!-- ======= SECTION P-ABOUT START ======= -->
+				<section class="p-about pl-60">
 					<h1 class="section-title">Оплата</h1>
-					<p>У нас гибкая оплата покупок, возможны 3 разных способа оплаты</p>
-					<h3>Наличный расчет</h3>
-					<p>Оплата производится по факту прибытия товара к заказчику, непосредственно на руки представителю нашей компании, осуществляющему доставку, до начала разгрузки</p>
-					<h3>Безналичный расчет</h3>
-					<p>Сразу после оформления заказа в нашем интернет-магазине, с вами свяжется менеджер, уточнит детали заказа и выставит счет на оплату. Как только средства поступят на наш счет, мы свяжемся повторно и отправим вам оплаченный заказ.</p>
-					<h3>Перевод на карту "Сбербанка"</h3>
-					<p>Вы можете перевести денежные средства для оплаты товара по номеру карты.</p>
-					<p>По вопросам оплаты Вы можете обратиться к менеджерам нашего магазина по телефону <a href="tel:74994041942" class="link-phone">+7 (499) 404-19-42</a></p>
+					<p>Одним из наших главных преимуществ является высокое качество предоставляемой нами продукции.</p>
+
+					<p>Мы сотрудничаем с производителями строительных и отделочных материалов, отлично зарекомендовавшими себя на отечественном рынке. Весь наш товар отвечает самым жестким требованиям и обладает высокими потребительскими характеристиками. Наша продукция – это новые и современные материалы и приспособления, которые можно использовать при любом виде ремонта. Неважно, будет ли это квартира, офис или загородный коттедж. Как внешние, так и внутренние материалы, предлагаемые нами, устойчивы к механическим повреждениям и не боятся воздействий окружающей среды. Это особенно важно для сурового российского климата.</p>
+					<p>Мы занимаемся оптовой торговлей и практикуем гибкую ценовую политику. Наша компания гарантирует, что у нас вы можете заказать любое количество товара, стоимость которого будет гораздо ниже, чем у большинства конкурентов. Это касается как основных отделочных и строительных материалов, так и аксессуаров. С подобными предметами, как и с другой продукцией, вы можете подробно ознакомиться в нашем интернет-магазине и, при желании, заказать что-либо в Москве или Подмосковье. Доставка осуществляется по обоим этим регионам. Цена же доставки может варьироваться, в зависимости от расположения конечного пункта. В пределах Москвы она будет стоить чуть ниже, чем по области. Более подробно о данной услуге вы можете узнать, посетив соответствующий раздел на нашем сайте.</p>
+					<p>Мы – те дилеры строительных материалов, которые готовы помочь клиенту в выборе подходящей продукции. Если вы думаете о том, чтобы купить оптом какой-либо товар – наши специалисты с удовольствием вас проконсультируют. Вы можете оставить сообщение он-лайн, а можете связаться с нами по телефону. Мы ответим на все интересующие вас вопросы, касающиеся продаж в Москве или Подмосковье. Если вы испытываете какие-либо сомнения насчет того, что вам необходимо, мы с удовольствием поможем вам и в этом аспекте.</p>
+					<p>Наши специалисты дадут вам всю самую необходимую информацию, касающуюся сферы продажи строительных материалов оптом и их цен.</p>
 				</section>
-				<!-- ======= SECTION ARTICLE END ======= -->
+				<!-- ======= SECTION P-ABOUT END ======= -->
+
+				<!-- ======= SECTION WHY START ======= -->
+				<section class="s-why p-why">
+					<h2 class="section-title">Почему мы?</h2>
+					<div class="why-wrap">
+						<!-- why-item -->
+						<div class="why-item">
+							<div class="why-item-icon">
+								<img src="img/icons/why-icon-1.png" alt="alt">
+							</div>
+							<div class="why-item-title">Срочная доставка</div>
+						</div>
+						<!-- /why-item -->
+
+						<!-- why-item -->
+						<div class="why-item">
+							<div class="why-item-icon">
+								<img src="img/icons/why-icon-2.png" alt="alt">
+							</div>
+							<div class="why-item-title">Удобная оплата</div>
+						</div>
+						<!-- /why-item -->
+
+						<!-- why-item -->
+						<div class="why-item">
+							<div class="why-item-icon">
+								<img src="img/icons/why-icon-3.png" alt="alt">
+							</div>
+							<div class="why-item-title">Сертифицированный товар</div>
+						</div>
+						<!-- /why-item -->
+					</div>
+				</section>
+				<!-- ======= SECTION WHY END ======= -->
+
+				<!-- ======= SECTION GALLERY START ======= -->
+				<section class="s-gallery">
+					<h2 class="section-title pl-60">Фотогалерея</h2>
+					<div class="gallery-wrap">
+						<div class="gallery-slider owl-carousel">
+							<!-- slide start -->
+							<div class="gallery-slide">
+								<a href="img/gallery-img-1.jpg" data-size="1400x800">
+									<img src="img/gallery-img-1.jpg" alt="alt" class="img-responsive">
+								</a>
+							</div>
+							<!-- slide end -->
+
+							<!-- slide start -->
+							<div class="gallery-slide">
+								<a href="img/gallery-img-2.jpg" data-size="1400x800">
+									<img src="img/gallery-img-2.jpg" alt="alt" class="img-responsive">
+								</a>
+							</div>
+							<!-- slide end -->
+
+							<!-- slide start -->
+							<div class="gallery-slide">
+								<a href="img/gallery-img-3.jpg" data-size="1400x800">
+									<img src="img/gallery-img-3.jpg" alt="alt" class="img-responsive">
+								</a>
+							</div>
+							<!-- slide end -->
+
+							<!-- slide start -->
+							<div class="gallery-slide">
+								<a href="img/gallery-img-1.jpg" data-size="1400x800">
+									<img src="img/gallery-img-1.jpg" alt="alt" class="img-responsive">
+								</a>
+							</div>
+							<!-- slide end -->
+
+							<!-- slide start -->
+							<div class="gallery-slide">
+								<a href="img/gallery-img-2.jpg" data-size="1400x800">
+									<img src="img/gallery-img-2.jpg" alt="alt" class="img-responsive">
+								</a>
+							</div>
+							<!-- slide end -->
+
+							<!-- slide start -->
+							<div class="gallery-slide">
+								<a href="img/gallery-img-3.jpg" data-size="1400x800">
+									<img src="img/gallery-img-3.jpg" alt="alt" class="img-responsive">
+								</a>
+							</div>
+							<!-- slide end -->
+						</div>
+					</div>
+				</section>
+				<!-- ======= SECTION GALLERY END ======= -->
 			</div>
 		</div>
 	</div>
@@ -406,16 +495,72 @@
 	<div class="dev-line">
 		Разработка сайта <a href="https://grampus-studio.ru/" target="_blank"><img src="img/dev-logo.png" alt="alt"></a>
 	</div>
-
-
-
-
-
-
-
 </div>
 
+<!-- ======= HTML FOR PHOTOSWIPE ======= -->
+<!-- Root element of PhotoSwipe. Must have class pswp. -->
+<div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
 
+	<!-- Background of PhotoSwipe.
+         It's a separate element as animating opacity is faster than rgba(). -->
+	<div class="pswp__bg"></div>
+
+	<!-- Slides wrapper with overflow:hidden. -->
+	<div class="pswp__scroll-wrap">
+
+		<!-- Container that holds slides.
+            PhotoSwipe keeps only 3 of them in the DOM to save memory.
+            Don't modify these 3 pswp__item elements, data is added later on. -->
+		<div class="pswp__container">
+			<div class="pswp__item"></div>
+			<div class="pswp__item"></div>
+			<div class="pswp__item"></div>
+		</div>
+
+		<!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
+		<div class="pswp__ui pswp__ui--hidden">
+
+			<div class="pswp__top-bar">
+
+				<!--  Controls are self-explanatory. Order can be changed. -->
+
+				<div class="pswp__counter"></div>
+
+				<button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+
+				<button class="pswp__button pswp__button--share" title="Share"></button>
+
+				<button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+
+				<button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+
+				<!-- Preloader demo http://codepen.io/dimsemenov/pen/yyBWoR -->
+				<div class="pswp__preloader">
+					<div class="pswp__preloader__icn">
+						<div class="pswp__preloader__cut">
+							<div class="pswp__preloader__donut"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+				<div class="pswp__share-tooltip"></div>
+			</div>
+
+			<button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
+			</button>
+
+			<button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
+			</button>
+
+			<div class="pswp__caption">
+				<div class="pswp__caption__center"></div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- ======= END HTML FOR PHOTOSWIPE ======= -->
 
 <script src="js/scripts.min.js"></script>
 
