--- a/app/page-news.html
+++ b/app/page-news.html
@@ -295,54 +295,102 @@
 				</div>
 				<!-- ======= BREADCRUMBS END ======= -->
 
-				<!-- ======= SECTION SUBPRODUCTION START ======= -->
-				<section class="s-subproduction pl-60">
-					<h2 class="section-title">Армировочные материалы</h2>
-					<div class="subproduction-wrap">
-						<!-- subproduction-item -->
-						<a href="#0" class="subproduction-item">
-							<span class="subproduction-item-img" style="background-image: url('img/subproduction-img-1.jpg');"></span>
-							<span class="subproduction-item-title">Москитная сетка</span>
-						</a>
-						<!-- /subproduction-item -->
+				<!-- ======= SECTION NEWS START ======= -->
+				<section class="s-news pl-60">
+					<h1 class="section-title">Новости</h1>
+					<div class="news-wrap">
+						<!-- news-item -->
+						<div class="news-item">
+							<div class="news-item-img" style="background-image: url('img/news-img-1.jpg');"></div>
+							<div class="news-item-date">08.05.2019</div>
+							<a href="#0" class="news-item-title">Поздравляем с годовщиной Великой Победы!</a>
+							<div class="news-item-desc">Коллектив "Купи и строй" поздравляет вас с очередной годовщиной Великой Победы!
+								<a href="#0" class="news-item-link">Читать всё</a></div>
+						</div>
+						<!-- /news-item -->
 
-						<!-- subproduction-item -->
-						<a href="#0" class="subproduction-item">
-							<span class="subproduction-item-img" style="background-image: url('img/subproduction-img-2.jpg');"></span>
-							<span class="subproduction-item-title">Серпянка</span>
-						</a>
-						<!-- /subproduction-item -->
+						<!-- news-item -->
+						<div class="news-item">
+							<div class="news-item-img" style="background-image: url('img/news-img-2.jpg');"></div>
+							<div class="news-item-date">08.05.2019</div>
+							<a href="#0" class="news-item-title">C новым 2020 годом!</a>
+							<div class="news-item-desc">Коллектив "Купи и строй" поздравляет вас с очередной годовщиной Великой Победы!
+								<a href="#0" class="news-item-link">Читать всё</a></div>
+						</div>
+						<!-- /news-item -->
 
-						<!-- subproduction-item -->
-						<a href="#0" class="subproduction-item">
-							<span class="subproduction-item-img" style="background-image: url('img/subproduction-img-3.jpg');"></span>
-							<span class="subproduction-item-title">Сетка для аварийного ограждения</span>
-						</a>
-						<!-- /subproduction-item -->
+						<!-- news-item -->
+						<div class="news-item">
+							<div class="news-item-img" style="background-image: url('img/news-img-3.jpg');"></div>
+							<div class="news-item-date">08.05.2019</div>
+							<a href="#0" class="news-item-title">Черная пятница</a>
+							<div class="news-item-desc">Коллектив "Купи и строй" поздравляет вас с очередной годовщиной Великой Победы!
+								<a href="#0" class="news-item-link">Читать всё</a></div>
+						</div>
+						<!-- /news-item -->
 
-						<!-- subproduction-item -->
-						<a href="#0" class="subproduction-item">
-							<span class="subproduction-item-img" style="background-image: url('img/subproduction-img-4.jpg');"></span>
-							<span class="subproduction-item-title">Стеклосетка</span>
-						</a>
-						<!-- /subproduction-item -->
+						<!-- news-item -->
+						<div class="news-item">
+							<div class="news-item-img" style="background-image: url('img/news-img-1.jpg');"></div>
+							<div class="news-item-date">08.05.2019</div>
+							<a href="#0" class="news-item-title">Поздравляем с годовщиной Великой Победы!</a>
+							<div class="news-item-desc">Коллектив "Купи и строй" поздравляет вас с очередной годовщиной Великой Победы!
+								<a href="#0" class="news-item-link">Читать всё</a></div>
+						</div>
+						<!-- /news-item -->
 
-						<!-- subproduction-item -->
-						<a href="#0" class="subproduction-item">
-							<span class="subproduction-item-img" style="background-image: url('img/subproduction-img-5.jpg');"></span>
-							<span class="subproduction-item-title">Строительная лента</span>
-						</a>
-						<!-- /subproduction-item -->
+						<!-- news-item -->
+						<div class="news-item">
+							<div class="news-item-img" style="background-image: url('img/news-img-2.jpg');"></div>
+							<div class="news-item-date">08.05.2019</div>
+							<a href="#0" class="news-item-title">C новым 2020 годом! Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consectetur.</a>
+							<div class="news-item-desc">Коллектив "Купи и строй" поздравляет вас с очередной годовщиной Великой Победы!
+								<a href="#0" class="news-item-link">Читать всё</a></div>
+						</div>
+						<!-- /news-item -->
 
-						<!-- subproduction-item -->
-						<a href="#0" class="subproduction-item">
-							<span class="subproduction-item-img" style="background-image: url('img/subproduction-img-6.jpg');"></span>
-							<span class="subproduction-item-title">Строительный скотч</span>
-						</a>
-						<!-- /subproduction-item -->
+						<!-- news-item -->
+						<div class="news-item">
+							<div class="news-item-img" style="background-image: url('img/news-img-3.jpg');"></div>
+							<div class="news-item-date">08.05.2019</div>
+							<a href="#0" class="news-item-title">Черная пятница</a>
+							<div class="news-item-desc">Коллектив "Купи и строй" поздравляет вас с очередной годовщиной Великой Победы!
+								<a href="#0" class="news-item-link">Читать всё</a></div>
+						</div>
+						<!-- /news-item -->
+
+						<!-- news-item -->
+						<div class="news-item">
+							<div class="news-item-img" style="background-image: url('img/news-img-1.jpg');"></div>
+							<div class="news-item-date">08.05.2019</div>
+							<a href="#0" class="news-item-title">Поздравляем с годовщиной Великой Победы!</a>
+							<div class="news-item-desc">Коллектив "Купи и строй" поздравляет вас с очередной годовщиной Великой Победы!
+								<a href="#0" class="news-item-link">Читать всё</a></div>
+						</div>
+						<!-- /news-item -->
+
+						<!-- news-item -->
+						<div class="news-item">
+							<div class="news-item-img" style="background-image: url('img/news-img-2.jpg');"></div>
+							<div class="news-item-date">08.05.2019</div>
+							<a href="#0" class="news-item-title">C новым 2020 годом!</a>
+							<div class="news-item-desc">Коллектив "Купи и строй" поздравляет вас с очередной годовщиной Великой Победы!
+								<a href="#0" class="news-item-link">Читать всё</a></div>
+						</div>
+						<!-- /news-item -->
+
+						<!-- news-item -->
+						<div class="news-item">
+							<div class="news-item-img" style="background-image: url('img/news-img-3.jpg');"></div>
+							<div class="news-item-date">08.05.2019</div>
+							<a href="#0" class="news-item-title">Черная пятница</a>
+							<div class="news-item-desc">Коллектив "Купи и строй" поздравляет вас с очередной годовщиной Великой Победы!
+								<a href="#0" class="news-item-link">Читать всё</a></div>
+						</div>
+						<!-- /news-item -->
 					</div>
 				</section>
-				<!-- ======= SECTION SUBPRODUCTION START ======= -->
+				<!-- ======= SECTION NEWS END ======= -->
 			</div>
 		</div>
 	</div>
